# defenDL

./: Makefile  pyproject.toml
.github/workflows/: ci.yml
defenDL/: base.py
defenDL/attacks/: __init__.py  base.py  cw.py  fgsm.py  pgd.py
defenDL/base/: model.py
defenDL/common/: types.py
defenDL/defenses/: __init__.py  distillation.py  trainer.py
defenDL/examples/: common.py
defenDL/metrics/: __init__.py  eval_metrics.py
defenDL/utils/: __init__.py  handle_types.py
tests/: common.py  test_cw.py  test_distillation.py  test_fgsm.py  test_metrics.py  test_pgd.py  test_trainer.py
tests/attacks/: test_cw.py  test_fgsm.py  test_pgd.py
tests/defenses/: test_distillation.py  test_trainer.py
tests/metrics/: test_metrics.py
